--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Edinaldo67/portfolioWeb#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "node": "^11.12.0",
     "node-sass": "^4.11.0"
   }
 }
