--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolioweb",
   "version": "1.0.0",
   "description": "responsive portfolio website",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
