--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "responsive portfolio website",
   "main": "index.html",
   "scripts": {
+    "start": "node index \"npm run server\" \"npm start\"",
     "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "repository": {
