--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/Edinaldo67/portfolioWeb#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "node": "^11.12.0",
-    "node-sass": "^4.11.0"
+    "node-sass": "^4.11.0",
+    "yarn": "^1.15.2"
   }
 }
