--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "node": "^11.12.0",
-    "node-sass": "^4.11.0",
-    "yarn": "^1.15.2"
+    "node-sass": "^4.11.0"
   }
 }
