--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,9 +17,10 @@
   "bugs": {
     "url": "https://github.com/Edinaldo67/portfolioWeb/issues"
   },
-  "homepage": "https://github.com/Edinaldo67/portfolioWeb#readme",
+  "homepage": "https://github.com/Edinaldo67/portfolioWeb",
   "dependencies": {
     "express": "^4.16.4",
+    "gh-pages": "^2.0.1",
     "node": "^11.12.0",
     "node-sass": "^4.11.0"
   }
